5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4382/executions/1596_825.log
== SUBMITION (2019-03-27 00:41:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio_r=float(input("raio r"))
from math import *
print(round(area do circulo= pi * raio_r,3))
print(round(volume da esfera = 4/3*raio_r,3))

-- EXECUTION TIME:
0.139569
-- ERROR:
  File "/home/codebench/codes/1596/825/main.py", line 6
    print(round(area do circulo= pi * raio_r,3))
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:41:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio_r=float(input("raio r"))
from math import *
print(round(area do circulo= pi * raio_r,3))
print(round(volume da esfera = 4/3*raio_r,3))

-- ERROR:
File "XXXX", line 6
    print(round(area do circulo= pi * raio_r,3))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:43:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio_r=float(input("raio r"))
from math import *
area_do_circulo= pi * raio_r
volume da esfera = 4/3*raio_r
print(round(area_do_circulo,3))
print(round(volume_da_esfera,3))

-- EXECUTION TIME:
0.138468
-- ERROR:
  File "/home/codebench/codes/1596/825/main.py", line 7
    volume da esfera = 4/3*raio_r
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:44:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio_r=float(input("raio r"))
from math import *
area_do_circulo= pi * raio_r**2
volume da esfera = 4/3 * raio_r**3
print(round(area_do_circulo,3))
print(round(volume_da_esfera,3))

-- EXECUTION TIME:
0.148016
-- ERROR:
  File "/home/codebench/codes/1596/825/main.py", line 7
    volume da esfera = 4/3 * raio_r**3
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:44:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio_r=float(input("raio r"))
from math import *
area_do_circulo= pi * raio_r**2
volume da esfera = 4/3 * pi * raio_r**3
print(round(area_do_circulo,3))
print(round(volume_da_esfera,3))

-- EXECUTION TIME:
0.137759
-- ERROR:
  File "/home/codebench/codes/1596/825/main.py", line 7
    volume da esfera = 4/3 * pi * raio_r**3
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:45:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio_r=float(input("raio r"))
from math import *
area_do_circulo= pi*raio_r**2
volume da esfera = 4/3*pi*raio_r**3
print(round(area_do_circulo,3))
print(round(volume_da_esfera,3))

-- EXECUTION TIME:
0.118885
-- ERROR:
  File "/home/codebench/codes/1596/825/main.py", line 7
    volume da esfera = 4/3*pi*raio_r**3
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:45:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio_r=float(input("raio r"))
from math import *
area_do_circulo= pi*raio_r**2
volume da esfera = 4/3*pi*raio_r**3
print(round(area_do_circulo,3))
print(round(volume_da_esfera,3))

-- ERROR:
File "XXXX", line 7
    volume da esfera = 4/3*pi*raio_r**3
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:45:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio_r=float(input("raio r"))
from math import *
area_do_circulo= pi*raio_r**2
volume_da_esfera = 4/3*pi*raio_r**3
print(round(area_do_circulo,3))
print(round(volume_da_esfera,3))

-- EXECUTION TIME:
0.174136
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
